Create Components with basic layout and CSS styling

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
+    "bootstrap": "^4.5.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
