--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "name": "related-items",
+  "jest": {
+    "moduleNameMapper": {
+      "^.+\\.(css|less|scss)$": "babel-jest"
+    }
+  },
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
