--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-multi-carousel": "^2.5.5",
     "reactstrap": "^8.5.1"
   }
 }
